--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,15 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield; 
+  -webkit-appearance: none;   
+  appearance: none;           
+}
+
